# easy-s3

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.superpowers/sdd/: progress.md  task-1-brief.md
docs/superpowers/plans/: 2026-07-02-s3-browser.md
docs/superpowers/specs/: 2026-07-02-s3-browser-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: connection_commands.rs  mod.rs  s3_commands.rs  system_commands.rs
src-tauri/src/s3/: client.rs
src-tauri/src/store/: credential.rs
src/components/: BucketSidebar.tsx  ConfirmDialog.tsx  ConnectionForm.tsx  CreateBucketDialog.tsx  DownloadManager.tsx  FileList.tsx  FilePreview.tsx  FileUploader.tsx  SearchBar.tsx  UploadManager.tsx
src/pages/: BrowserPage.tsx  ConnectionsPage.tsx  StockPage.tsx
src/store/: browserStore.ts  connectionStore.ts  downloadStore.ts  settingsStore.ts  stockStore.ts  uploadStore.ts
src/utils/: fileIcons.ts
