[package]
name = "s3-browser"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
keyring = "2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
dirs = "5"
futures = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
